--- a/T-Shirt.html
+++ b/T-Shirt.html
@@ -307,12 +307,13 @@
         }
 
         .produkt img {
-            width: 70%;
-            height: 360px;
             object-fit: cover;
             border-radius: 8px;
             border: 3px solid #ccc;
             margin: 20px 0;
+            width: 100%;
+            height: auto;
+            max-width: 300px;
         }
 
         .groessenwahl {
@@ -322,7 +323,9 @@
             margin-bottom: 10px;
             width: 100%;
             display: flex;
-            gap: 10px;
+            flex-direction: row;
+            justify-content: center;
+            gap: 5px;
         }
 
         /* Styling für die Radio-Buttons */
